<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>joint_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bartlomiejk@vp.pl">Bartłomiej Krajewski</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- All packages -->
  <exec_depend>joint_controller</exec_depend>
  <exec_depend>joint_controller_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
